<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="bankViewModel"
            type="pe.com.onecanal.presentation.ui.features.bank.viewModel.BankViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".presentation.ui.features.bank.view.BankFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/appbar"
                layout="@layout/action_bar_simple"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen26"
                android:layout_marginBottom="@dimen/dimen14"
                android:text="@string/add_bank_btn_text"
                app:layout_constraintBottom_toTopOf="@+id/btnCancel"
                app:layout_constraintEnd_toStartOf="@+id/guideline8"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/ot_password2"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen16"
                android:gravity="center"
                android:text="@string/bank_helper"
                android:textAppearance="@style/body2"
                android:textColor="@color/hinter_color_2"
                app:layout_constraintEnd_toStartOf="@+id/guideline8"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/appbar" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ot_password"
                style="@style/myDropDown"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen20"
                android:hint="@string/bank"
                android:textColorHint="@color/black"
                app:setError="@{bankViewModel.bankType.errorTextResource}"
                app:layout_constraintEnd_toStartOf="@+id/guideline8"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/textView22">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/autocomplete_bank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:text="@={bankViewModel.bankType.fieldText}"
                    android:textAppearance="@style/Subtitle3" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ot_password1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen15"
                android:hint="@string/number_account"
                app:endIconDrawable="@drawable/ic_password_trailing_icon_0"
                app:setError="@{bankViewModel.number.errorTextResource}"
                app:layout_constraintEnd_toStartOf="@+id/guideline8"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/ot_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/number_account_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="20"
                    android:textAppearance="@style/body3"
                    android:text="@={bankViewModel.number.fieldText}"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ot_password2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen15"
                android:hint="@string/cci"
                app:endIconDrawable="@drawable/ic_password_trailing_icon_0"
                app:setError="@{bankViewModel.cci.errorTextResource}"
                app:layout_constraintEnd_toStartOf="@+id/guideline8"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/ot_password1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cci_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="20"
                    android:textAppearance="@style/body3"
                    android:text="@={bankViewModel.cci.fieldText}"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnCancel"
                style="@style/MyOutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen36"
                android:text="@string/cancel_bank_btn_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline8"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline7" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>